--- a/leaden/ui.ui
+++ b/leaden/ui.ui
@@ -6,39 +6,61 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1023</width>
-    <height>720</height>
+    <width>1000</width>
+    <height>654</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>700</width>
+     <height>500</height>
+    </size>
+   </property>
+   <property name="acceptDrops">
+    <bool>false</bool>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QSplitter" name="splitter_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <widget class="QSplitter" name="splitter">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
        <widget class="QTreeWidget" name="treeWidget">
+        <property name="sizeAdjustPolicy">
+         <enum>QAbstractScrollArea::AdjustToContents</enum>
+        </property>
         <column>
          <property name="text">
           <string notr="true">1</string>
          </property>
         </column>
        </widget>
-      </item>
-      <item>
        <widget class="QTabWidget" name="tabWidget">
-        <property name="minimumSize">
-         <size>
-          <width>500</width>
-          <height>500</height>
-         </size>
-        </property>
-        <property name="baseSize">
-         <size>
-          <width>500</width>
-          <height>500</height>
-         </size>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
         <property name="currentIndex">
          <number>0</number>
@@ -47,9 +69,9 @@
          <attribute name="title">
           <string>Tab 1</string>
          </attribute>
-         <layout class="QGridLayout" name="gridLayout">
+         <layout class="QGridLayout" name="gridLayout_2">
           <item row="0" column="0">
-           <widget class="QTextBrowser" name="textBrowser_2"/>
+           <widget class="QTextEdit" name="textEdit"/>
           </item>
          </layout>
         </widget>
@@ -57,21 +79,21 @@
          <attribute name="title">
           <string>Tab 2</string>
          </attribute>
-         <layout class="QGridLayout" name="gridLayout_2">
+         <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
-           <widget class="QTextBrowser" name="textBrowser_3"/>
+           <widget class="QTextEdit" name="textEdit_2"/>
           </item>
          </layout>
         </widget>
        </widget>
-      </item>
-      <item alignment="Qt::AlignRight">
-       <widget class="QListWidget" name="listWidget"/>
-      </item>
-     </layout>
-    </item>
-    <item alignment="Qt::AlignBottom">
-     <widget class="QTextBrowser" name="textBrowser"/>
+       <widget class="QListWidget" name="listWidget">
+        <property name="sizeAdjustPolicy">
+         <enum>QAbstractScrollArea::AdjustToContents</enum>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QTextBrowser" name="textBrowser"/>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -80,7 +102,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1023</width>
+     <width>1000</width>
      <height>18</height>
     </rect>
    </property>
